# commit-wizard

./: .env.example  .gitignore  .markdownlint.yaml  .mdl_style.rb  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  codecov.yml  install.sh
.cargo/: config.toml
.devcontainer/: .devcontainer.env.example  Dockerfile  README.md  devcontainer.json  post-create.sh
.github/: BRANCH_PROTECTION.md  CODEOWNERS  codeql-config.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/scripts/: README.md  add-review-label.sh  check-already-reviewed.sh  check-pr-status.sh  get-pr-number.sh  handle-error.sh  submit-review.sh
.github/workflows/: auto-review.yml  build-release-artifacts.yml  codeql.yml  pr.yml  pr_labeler.yml  release.yml  rust-tests.yml  tag.yml
benches/: README.md
docs/: ALPINE_INSTALL.md  COVERAGE.md  INSTALLATION.md  MAKEFILE_RELEASE_BUILDS.md  MUSL_BUILD.md  PRE_COMMIT.md  PRE_COMMIT_MIGRATION.md  REFACTORING_COPILOT.md  REFACTORING_EDTUI.md  ai-api-configuration.md  ai-features.md  devcontainer-analysis.md  github-token-setup.md  technical-documentation.md  token-testing.md  workflow-analysis.md  workflow-improvements-summary.md
examples/: README.md  basic_usage.rs
scripts/: README.md  create-apk-info.sh  generate-man.sh  test-github-token.sh
src/: ai.rs  copilot.rs  editor.rs  git.rs  inference.rs  lib.rs  logging.rs  main.rs  output.rs  progress.rs  types.rs  ui.rs
tests/: README.md  ai_tests.rs  commit_message_format_tests.rs  copilot_tests.rs  editor_tests.rs  editor_unit_tests.rs  git_tests.rs  grouping_integration_tests.rs  inference_tests.rs  output_tests.rs  types_tests.rs  untracked_files_tests.rs  validation_tests.rs
