[package]
name = "commit-wizard"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["jfheinrich <joerg@jfheinrich.eu>"]
description = "A CLI tool to help create better commit messages"
readme = "README.md"
repository = "https://github.com/jfheinrich-eu/commit-wizard"
license = "MIT"
keywords = ["cli", "git", "commit", "wizard"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20.2"
regex = "1"
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
crossterm = "0.29.0"
ratatui = { version = "0.29", default-features = false, features = [
    "crossterm",
] }
dotenv = "0.15.0"
async-openai = "0.30.1"

[features]
default = []
vendored-openssl = ["git2/vendored-openssl"]

[dev-dependencies]

[[bin]]
name = "commit-wizard"
path = "src/main.rs"
