[package]
name = "commit-wizard"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["jfheinrich <joerg@jfheinrich.eu>"]
description = "A CLI tool to help create better commit messages"
readme = "README.md"
repository = "https://github.com/jfheinrich-eu/commit-wizard"
license = "MIT"
keywords = ["cli", "git", "commit", "wizard"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.cargo-machete]
# Ignore false positives - these dependencies are used via re-exports or in specific contexts
ignored = ["crossterm", "async-openai", "thiserror", "tui-framework-experiment"]

[dependencies]
anyhow = "1"
clap = { version = "4.5.53", features = ["derive"] }
git2 = "^0.20"
regex = "1"
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", default-features = false, features = [
    "crossterm",
] }
dotenv = "0.15.0"
async-openai = "0.30.1"
tui-framework-experiment = "0.4.0"
edtui = "0.9.9"

[features]
default = []
vendored-openssl = ["git2/vendored-openssl"]

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "commit-wizard"
path = "src/main.rs"
