[package]
name = "commit-wizard"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["jfheinrich <joerg@jfheinrich.eu>"]
description = "A CLI tool to help create better commit messages"
readme = "README.md"
repository = "https://github.com/jfheinrich-eu/commit-wizard"
license = "MIT"
keywords = ["cli", "git", "commit", "wizard"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.cargo-machete]
# Ignore false positives - these dependencies are used via re-exports or in specific contexts
ignored = ["crossterm", "async-openai", "thiserror", "tui-framework-experiment"]

[dependencies]
anyhow = "1"
clap = { version = "4.5.53", features = ["derive"] }
git2 = "^0.20"
log = "0.4.29"
chrono = "0.4"
regex = "1"
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", default-features = false, features = [
    "crossterm",
] }
async-openai = "0.31.1"
tui-framework-experiment = "0.4.0"
edtui = "0.9.9"
dirs = "5"

[features]
default = []
vendored-openssl = ["git2/vendored-openssl"]

[dev-dependencies]
tempfile = "3"
mockito = "1.7"

# Metadata for cargo-deb (Debian/Ubuntu packages)
[package.metadata.deb]
maintainer = "jfheinrich <joerg@jfheinrich.eu>"
copyright = "2025, jfheinrich <joerg@jfheinrich.eu>"
license-file = ["LICENSE", "0"]
extended-description = """\
A CLI tool to help create better commit messages following conventional commit \
standards. Features interactive wizards and GitHub Copilot integration."""
depends = "$auto"
section = "devel"
priority = "optional"
assets = [
    [
        "target/release/commit-wizard",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/commit-wizard/",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/commit-wizard/",
        "644",
    ],
    [
        "docs/*",
        "usr/share/doc/commit-wizard/",
        "644",
    ],
]

# Metadata for cargo-generate-rpm (Fedora/RHEL/CentOS packages)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/commit-wizard", dest = "/usr/bin/commit-wizard", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/commit-wizard/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/commit-wizard/LICENSE", mode = "644", doc = true },
]
[package.metadata.generate-rpm.requires]
git = "*"

[[bin]]
name = "commit-wizard"
path = "src/main.rs"
